--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <body>
   <div class="top">
-    <img src="./刻晴.jpg" alt="刻晴">
+    <img src="http://img.nga.178.com/attachments/mon_202109/27/l2Q8jki-8x61K2dT3cSsg-sg.jpg" alt="刻晴">
   </div>
   <div class="container">
     <h3>沁园春·雪</h3>
